infrastructure/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logistics-prod
  labels:
    name: logistics-prod
    environment: production
    app.kubernetes.io/part-of: logistics-microservices
